# Piper

./: README.md  install.sh  piper  pyproject.toml
scripts/: record_demonstration.py
src/: can_helper.py  main.py
src/piper/: can_helper.py
src/piper/real/control_client/: piper_client.py
src/piper/real/controller/: base_controller.py  interpolation_controller.py
src/piper/real/embodiment/: base_embodiment.py  piper.py
src/piper/real/shared_memory/: shared_memory_queue.py  shared_memory_ring_buffer.py
src/piper/real/utils/: pose_trajectory_interpolator.py
src/piper/scripts/: find_all_can_port.sh
src/piper/teleop/asset/piper_description/urdf/: piper_description.urdf
src/piper/teleop/asset/piper_description/urdf/piper_description/: piper_description.usd
src/piper/teleop/device/: camera.py  iphone.py  keyboard.py  mouse.py
src/piper/teleop/post_processor/: base_postprocessor.py  piper.py  so100.py
src/piper/teleop/pre_processor/: base_preprocessor.py  camera_piper.py  iphone_piper.py  mouse_piper.py  mouse_so100.py  spacemouse_so100.py
src/piper/teleop/robots/: articulation.py  robot.py  visualizer.py
src/piper/teleop/solvers/: basic_solver.py  ik_solver.py
src/piper_dev/: piper_helper.py
src/piper_dev/control_client/: base_client.py  piper_client.py
src/piper_dev/controller/: __init__.py  interpolation_controller.py
src/piper_dev/embodiment/: piper.py
src/piper_dev/real/control_client/: inspire_hand_client.py
src/piper_dev/real/embodiment/: piper.py
src/piper_dev/real/shared_memory/: shared_memory_queue.py
src/piper_dev/scripts/: can_activate.sh
src/piper_dev/shared_memory/: shared_memory_queue.py  shared_memory_ring_buffer.py
src/piper_dev/utils/: pose_trajectory_interpolator.py
tests/: control_gripper.py  control_joint.py  test_3d_plot.py  test_can.py  test_curobo.py  test_keyboard.py  test_mouse.py  test_piper_client.py
(+1 files in other folders)
