[project]
name = "piper-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "atomics>=1.0.3",
    "click>=8.2.1",
    "numpy>=2.2.6",
    "piper-sdk>=0.2.19",
    "pynput>=1.8.1",
    "python-can>=4.5.0",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
    "jupyter",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
