[project]
name = "piper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "atomics>=1.0.3",
    "click>=8.2.1",
    "lerobot",
    "meshcat>=0.3.2",
    "numpy>=2.2.6",
    "pin-pink>=3.3.0",
    "piper-sdk>=0.2.19",
    "pynput>=1.8.1",
    "python-can>=4.5.0",
    "qpsolvers[osqp]>=4.7.1",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
    "jupyter",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot" }
